--- a/portfolio.html
+++ b/portfolio.html
@@ -6,96 +6,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
-    <link href="./css/styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link href="./css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-<header>
-    <nav class="site-nav">
-        <a lang="en" class="logo" href="">Web<span class="logo-black">Studio</span></a>
-        <ul class="list-item">
-            <li>
-                <a class="link" href="./index.html">Студия</a>
-            </li>
-            <li>
-                <a class="link current-page" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li>
-                <a class="link" href="">Контакты</a>
-            </li>
+    <header class="header-border">
+        <div class="container flex">
+            <nav class="site-nav flex">
+            <a lang="en" class="logo" href="">Web<span class="logo-black">Studio</span></a>
+            <ul class="list-item flex">
+                <li class="item">
+                    <a class="link" href="./index.html">Студия</a>
+                </li>
+                <li class="item">
+                    <a class="link current-page" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="item">
+                    <a class="link" href="">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+    
+        <ul class="contacts-head list-item flex">
+            <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-    </nav>
-
-    <ul class="contacts-head list-item">
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-</header>
+    </div>
+    </header>    
 
     <main class="portfolio">
-        <ul class="list-item">
-            <li> <button type="button" class="button">Все</button></li>
-            <li> <button type="button" class="button">Веб-сайты</button></li>
-            <li> <button type="button" class="button">Приложения</button></li>
-            <li> <button type="button" class="button">Дизайн</button></li>
-            <li> <button type="button" class="button">Маркетинг</button></li>
+        <div class="container">
+        <ul class="filter-list">
+            <li class="item"> <button type="button" class="button">Все</button></li>
+            <li class="item"> <button type="button" class="button">Веб-сайты</button></li>
+            <li class="item"> <button type="button" class="button">Приложения</button></li>
+            <li class="item"> <button type="button" class="button">Дизайн</button></li>
+            <li class="item"> <button type="button" class="button">Маркетинг</button></li>
         </ul>
 
         <ul class="list-item">
-            <li><img src="./images/portfolio/portfolio1.jpg" alt="ноутбук с открытым веб-сайтом" width="370"> 
+            <li class="item"><img class="imgblock" src="./images/portfolio/portfolio1.jpg" alt="ноутбук с открытым веб-сайтом" width="370"> 
+                <div class="content">
                 <h3 class="title">Технокряк</h3>
-                <p class="text">Веб-сайт</p>            
+                <p class="text">Веб-сайт</p>
+                </div>            
             </li>
-            <li><img src="./images/portfolio/portfolio2.jpg" alt="2 игрока клубов Нью-Орлеанс и Голден Стар играют в баскетбол" width="370">
+            <li class="item"><img class="imgblock" src="./images/portfolio/portfolio2.jpg" alt="2 игрока клубов Нью-Орлеанс и Голден Стар играют в баскетбол" width="370">
+                <div class="content">
                 <h3 class="title">Постер New Orlean vs Golden Star</h3>
                 <p class="text">Дизайн</p>
+                </div>
             </li>
-            <li><img src="./images/portfolio/portfolio3.jpg" alt="логотип ресторана Сиафуд" width="370">
-                <h3>Ресторан Seafood</h3>
+            <li class="item"><img class="imgblock" src="./images/portfolio/portfolio3.jpg" alt="логотип ресторана Сиафуд" width="370">
+                <div class="content">
+                <h3 class="title">Ресторан Seafood</h3>
                 <p class="text">Приложение</p>
+                </div>
             </li>
-            <li><img src="./images/portfolio/portfolio4.jpg" alt="наушники" width="370">
+            <li class="item"><img class="imgblock" src="./images/portfolio/portfolio4.jpg" alt="наушники" width="370">
+                <div class="content">
                 <h3 class="title">Проект Prime</h3>
                 <p class="text">Маркетинг</p>
+                </div>
             </li>
-            <li><img src="./images/portfolio/portfolio5.jpg" alt="две коробочки" width="370">
+            <li class="item"><img class="imgblock" src="./images/portfolio/portfolio5.jpg" alt="две коробочки" width="370">
+                <div class="content">
                 <h3 class="title">Проект Boxes</h3>
                 <p class="text">Приложение</p>
+                </div>
             </li>
-            <li><img src="./images/portfolio/portfolio6.jpg" alt="монитор с открытым веб-сайтом" width="370">
+            <li class="item"><img class="imgblock" src="./images/portfolio/portfolio6.jpg" alt="монитор с открытым веб-сайтом" width="370">
+                <div class="content">
                 <h3 lang="en" class="title">Inspiration has no Borders</h3>
                 <p class="text">Веб-сайт</p>
+                </div>
             </li>
-            <li><img src="./images/portfolio/portfolio7.jpg" alt="развернутый гланцевый журнал" width="370">
+            <li class="item"><img class="imgblock" src="./images/portfolio/portfolio7.jpg" alt="развернутый гланцевый журнал" width="370">
+                <div class="content">
                 <h3 class="title">Издание Limited Edition</h3>
                 <p class="text">Дизайн</p>
+                </div>
             </li>
-            <li><img src="./images/portfolio/portfolio8.jpg" alt="этикетка Лаб" width="370">
+            <li class="item"><img class="imgblock" src="./images/portfolio/portfolio8.jpg" alt="этикетка Лаб" width="370">
+                <div class="content">
                 <h3 class="title">Проект LAB</h3>
                 <p class="text">Маркетинг</p>
+                </div>
             </li>
-            <li><img src="./images/portfolio/portfolio9.jpg" alt="ноутбук с открытым веб-сайтом грувин бизнеса" width="370">
+            <li class="item"><img class="imgblock" src="./images/portfolio/portfolio9.jpg" alt="ноутбук с открытым веб-сайтом грувин бизнеса" width="370">
+                <div class="content">
                 <h3 lang="en" class="title">Growing Business</h3>
                 <p class="text">Приложение</p>
-            </li>               
-           
+                </div>
+            </li>       
         </ul>
-
+        </div>
     </main>
 
     <footer class="footer">
+        <div class="container">
         <a lang="en" class="logo" href="">Web<span class="logo-white">Studio</span></a>
         <address class="address">            
             <p class="physical-address">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list-item">
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
+        </div>
     </footer>
 
 </body>
