--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
 
         <!-- Особенности -->
-        <section class="spec-section section">
+        <section class="spec-section">
             <div class="container">
             <ul class="list-item">
                 <li class="item">
@@ -71,7 +71,7 @@
 
         </section>
         <!-- Чем мы занимаемся -->
-        <section class="work-section section">
+        <section class="work-section">
             <div class="container">
             <h2 class="work-title">Чем мы занимаемся</h2>
             <ul class="list-item">
@@ -85,28 +85,36 @@
         </div>
         </section>
         <!-- Наша команда -->
-        <section class="team-section section">            
+        <section class="team-section">            
             <div class="container">
                 <h2 class="team-title">Наша команда</h2>
             <ul class="list-item">
                 <li class="item"> <img class="imgblock" src="./images/team1.jpg" width="270" alt="фото Игорь Демьяненко" />
+                    <div class="content"> 
                     <h3 class="team-name">Игорь Демьяненко</h3>
                     <p lang="en" class="team-position">Product Designer</p>
+                    </div>
                 </li>
 
                 <li class="item"> <img class="imgblock" src="./images/team2.jpg" width="270" alt="фото Ольга Репина" />
+                    <div class="content">
                     <h3 class="team-name">Ольга Репина</h3>
                     <p lang="en" class="team-position">Frontend Developer</p>
+                    </div>
                 </li>
 
                 <li class="item"> <img class="imgblock" src="./images/team3.jpg" width="270" alt="фото Николай Тарасов" />
+                    <div class="content">
                     <h3 class="team-name">Николай Тарасов</h3>
                     <p lang="en" class="team-position">Marketing</p>
+                    </div>
                 </li>
 
                 <li class="item"> <img class="imgblock" src="./images/team4.jpg" width="270" alt="фото Михаил Ермаков" />
+                    <div class="content">
                     <h3 class="team-name">Михаил Ермаков</h3>
                     <p lang="en" class="team-position">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
