--- a/portfolio.html
+++ b/portfolio.html
@@ -39,17 +39,18 @@
     </div>
     </header>    
 
-    <main class="portfolio">
-        <div class="container">
-        <ul class="filter-list">
+    <main>
+        <section class="portfolio">
+            <div class="container">
+                <ul class="filter-list">
             <li class="item"> <button type="button" class="button">Все</button></li>
             <li class="item"> <button type="button" class="button">Веб-сайты</button></li>
             <li class="item"> <button type="button" class="button">Приложения</button></li>
             <li class="item"> <button type="button" class="button">Дизайн</button></li>
             <li class="item"> <button type="button" class="button">Маркетинг</button></li>
-        </ul>
+                </ul>
 
-        <ul class="list-item">
+                <ul class="list-item">
             <li class="item"><img class="imgblock" src="./images/portfolio/portfolio1.jpg" alt="ноутбук с открытым веб-сайтом" width="370"> 
                 <div class="content">
                 <h3 class="title">Технокряк</h3>
@@ -104,8 +105,9 @@
                 <p class="text">Приложение</p>
                 </div>
             </li>       
-        </ul>
-        </div>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
